--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,117 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* Conteneur principal */
+.app-container {
+  height: 100%;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Header du chat */
+.chat-header {
+  text-align: center;
+  background-color: #18181b;
+  border-bottom: 1px solid #8f8f8f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.chat-header p {
+  color: white;
+  font-weight: bold;
+  margin-block: 8px;
 }
 
-.card {
-  padding: 2em;
+/* Conteneur du chat */
+.chat-box {
+  width: 300px;
+  height: 100%;
+  position: relative;
+  background-color: #18181b;
+  padding: 8px;
 }
 
-.read-the-docs {
-  color: #888;
+/* Zone de messages */
+.chat-messages {
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding-inline: 8px;
+  overflow: scroll;
+}
+
+.chat-message {
+  text-align: left;
+}
+
+.chat-message p {
+  color: white;
+  margin-block: 2px;
+}
+
+.chat-message-username {
+  font-weight: bold;
+}
+
+/* Alerte scroll désactivé */
+.scroll-alert {
+  position: absolute;
+  bottom: 8px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 90%;
+  background-color: rgba(11, 11, 11, 0.8);
+  padding: 4px;
+  border: 1px solid #8f8f8f;
+  border-radius: 16px;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  text-align: center;
+}
+
+.scroll-alert:hover {
+  background-color: rgba(66, 66, 66, 0.8);
+}
+
+/* Formulaire */
+.chat-form {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 8px;
+}
+
+.chat-input-container {
+  display: flex;
+  border-radius: 4px;
+  height: 32px;
+  width: 100%;
+}
+
+.chat-input {
+  background-color: transparent;
+  border: 1px solid #d4d4d9;
+  border-radius: 4px;
+  width: 100%;
+  padding: 0 8px;
+  color: white;
+}
+
+.chat-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9146ff;
+  color: white;
+  height: 32px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.chat-button:hover {
+  background-color: #772ce8;
 }
