--- a/src/components/message-form/MessageForm.css
+++ b/src/components/message-form/MessageForm.css
@@ -33,8 +33,10 @@
   background-color: #9146ff;
   color: white;
   height: 32px;
+  padding: 8px;
   border: none;
-  border-radius: 4px;
+  border-radius: 16px;
+  font-weight: bold;
   cursor: pointer;
 }
 
